쿠팡 가이드 포스팅

--- a/404.html
+++ b/404.html
@@ -51,7 +51,7 @@
   
   
 
-  <body class="main-center theme-black" itemscope itemtype="http://schema.org/WebPage"><header class="header" itemscope itemtype="http://schema.org/WPHeader">
+  <body class="main-center theme-white" itemscope itemtype="http://schema.org/WebPage"><header class="header" itemscope itemtype="http://schema.org/WPHeader">
     <div class="slimContent">
       <div class="navbar-header">
         <div class="profile-block text-center">
@@ -171,34 +171,6 @@
                 <a href="/"></a>
             </div>
             <div class="article-footer">
-<blockquote class="mt-2x">
-  <ul class="post-copyright list-unstyled">
-    <li class="post-copyright-link hidden-xs">
-      <strong>: </strong>
-      <a href="https://plertdev.github.io/404.html" title="404 Page not found" target="_blank" rel="external">https://plertdev.github.io/404.html</a>
-    </li>
-    <li class="post-copyright-license">
-      <strong>: </strong>
-        <a href="http://creativecommons.org/licenses/by/4.0/deed.zh" target="_blank" rel="external"></a>
-    </li>
-  </ul>
-</blockquote>
-
-<div class="panel panel-default panel-badger">
-  <div class="panel-body">
-    <figure class="media">
-      <div class="media-left">
-        <a href="" target="_blank" class="img-burn thumb-sm visible-lg">
-          <img src="https://plertdev.github.io/images/profile.jpg" class="img-rounded w-full" alt="">
-        </a>
-      </div>
-      <div class="media-body">
-        <h3 class="media-heading"><a href="" target="_blank"><span class="text-dark">개발자 L</span><small class="ml-1x">쿠팡, 11번가 알리미 개발자</small></a></h3>
-        <div></div>
-      </div>
-    </figure>
-  </div>
-</div>
 
             </div>
         </article>
